--- a/styles/partials/_activity-bar.scss
+++ b/styles/partials/_activity-bar.scss
@@ -1,9 +1,4 @@
-.col-3 {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-    #activity-bar {
-        background-color: rgb(53, 53, 53);
-        margin-top: 0px;
-    }
+#activity-bar {
+    background-color: rgb(53, 53, 53);
+    margin-top: 0px;
 }
