--- a/styles/partials/_palette.scss
+++ b/styles/partials/_palette.scss
@@ -12,4 +12,7 @@ $color1: rgba(11, 7, 90, 1);
 $color2: rgba(35, 56, 85, 1);
 $color3: rgba(40, 71, 118, 1);
 $color4: rgba(142, 148, 190, 1);
-$color5: rgba(197, 196, 204, 1);
+$color5: rgb(255, 255, 255);
+
+/* Font */
+$ptext: 'Montserrat', sans-serif;
